# Yaboku-Player

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
config/: eq.cfg
include/: eq.h  equalizer_ui.h  get_artist_info.h  lyrics.h  player.h  texture_loader.h  ui.h  ui_style.h
resources/: app.rc.in  yaboku_player.desktop.in
resources/icons/: icon.icns
scripts/: get_lyrics.py
src/: eq.cpp  equalizer_ui.cpp  get_artist_info.cpp  lyrics.cpp  main.cpp  player.cpp  texture_loader.cpp  ui.cpp  ui_style.cpp
